--- a/.buildkite/pipeline.yml
+++ b/.buildkite/pipeline.yml
@@ -123,10 +123,22 @@ steps:
     steps:
 
       - label: ":computer: MPI baroclinic wave (ρe_tot)"
-        command: "mpiexec julia --color=yes --project=examples examples/hybrid/driver.jl --job_id mpi_baroclinic_wave_rhoe"
+        key: "mpi_baro_wave"
+        command: "mpiexec julia --color=yes --project=examples examples/hybrid/driver.jl --job_id mpi_baroclinic_wave_rhoe --dt_save_to_disk 5days"
         artifact_paths: "mpi_baroclinic_wave_rhoe/*"
         env:
           CLIMACORE_DISTRIBUTED: "MPI"
+        agents:
+          slurm_ntasks: 2
+
+      - label: ":computer: Test restart for MPI baroclinic wave"
+        key: "restart_mpi_baro_wave"
+        depends_on: "mpi_baro_wave"
+        command: "mpiexec julia --color=yes --project=examples examples/hybrid/driver.jl --job_id mpi_baroclinic_wave_rhoe --t_end 1hours"
+        artifact_paths: "restart_mpi_baroclinic_wave_rhoe/*"
+        env:
+          CLIMACORE_DISTRIBUTED: "MPI"
+          RESTART_FILE: "mpi_baroclinic_wave_rhoe/restart_baro_wave.jld2"
         agents:
           slurm_ntasks: 2
 
