--- a/.buildkite/pipeline.yml
+++ b/.buildkite/pipeline.yml
@@ -244,6 +244,10 @@ steps:
         command: "julia --color=yes --project=examples examples/hybrid/driver.jl --config column --FLOAT_TYPE Float64 --hyperdiff false --moist equil --turbconv edmf --turbconv_case Bomex --split_ode false --ode_algo Euler --dt_save_to_sol 5mins --z_elem 60 --z_stretch false --z_max 3e3 --job_id edmf_bomex --dt 6secs --t_end 6hours --regression_test true --anelastic_dycore true"
         artifact_paths: "edmf_bomex/*"
 
+      - label: ":computer: Compressible Single column EDMF Bomex"
+        command: "julia --color=yes --project=examples examples/hybrid/driver.jl --config column --FLOAT_TYPE Float64 --hyperdiff false --moist equil --turbconv edmf --turbconv_case Bomex --dt_save_to_sol 5mins --z_elem 8 --z_stretch false --z_max 400 --job_id compressible_edmf_bomex --dt 4secs --t_end 6hours --regression_test true"
+        artifact_paths: "compressible_edmf_bomex/*"
+
       - label: ":computer: Single column EDMF DYCOMS_RF01"
         command: "julia --color=yes --project=examples examples/hybrid/driver.jl --config column --FLOAT_TYPE Float64 --hyperdiff false --moist equil --turbconv edmf --turbconv_case DYCOMS_RF01 --split_ode false --ode_algo Euler --dt_save_to_sol 5mins --z_elem 30 --z_stretch false --z_max 1500 --job_id edmf_dycoms_rf01 --dt 6secs --t_end 4hours --regression_test true --anelastic_dycore true"
         artifact_paths: "edmf_dycoms_rf01/*"
