--- a/Project.toml
+++ b/Project.toml
@@ -36,7 +36,7 @@ UnPack = "3a884ed6-31ef-47d7-9d2a-63182c4928ed"
 ClimaCore = "0.10"
 ClimaCorePlots = "0.2"
 ClimaCoreVTK = "0.6, 0.7"
-CloudMicrophysics = "0.6"
+CloudMicrophysics = "0.6, 0.7"
 Dierckx = "0.5"
 DiffEqCallbacks = "2.22"
 Distributions = "0.25"
