Run driver in test env

--- a/examples/Project.toml
+++ b/examples/Project.toml
@@ -79,7 +79,7 @@ DiffEqCallbacks = "2.22"
 DiffEqNoiseProcess = "5.9"
 DiffEqOperators = "4.42"
 Distributions = "0.25"
-DocStringExtensions = "0.8"
+DocStringExtensions = "0.8, 0.9"
 FastGaussQuadrature = "0.4"
 Flux = "0.12"
 ForwardDiff = "0.10"
