--- a/perf/Project.toml
+++ b/perf/Project.toml
@@ -76,7 +76,7 @@ CloudMicrophysics = "0.6"
 Dierckx = "0.5"
 DiffEqBase = "~6.84.0"
 Distributions = "0.25"
-DocStringExtensions = "0.8"
+DocStringExtensions = "0.8, 0.9"
 FastGaussQuadrature = "0.4"
 Flux = "0.12"
 Glob = "1.3"
