--- a/Project.toml
+++ b/Project.toml
@@ -42,16 +42,16 @@ DiffEqCallbacks = "2.22"
 Distributions = "0.25"
 DocStringExtensions = "0.8, 0.9"
 FastGaussQuadrature = "0.4"
-Flux = "0.12, 0.13"
+Flux = "0.12"
 Insolation = "0.3"
-IntervalSets = "0.5, 0.6, 0.7"
+IntervalSets = "0.5, 0.6"
 JLD2 = "0.4"
 LambertW = "0.4"
 OperatorFlux = "0.1"
 OrdinaryDiffEq = "5.64.0"
 StaticArrays = "1.4"
 StatsBase = "0.33"
-StochasticDiffEq = "6.41"
+StochasticDiffEq = "6.42"
 SurfaceFluxes = "0.4"
 Thermodynamics = "0.9"
 UnPack = "1"
