--- a/.buildkite/pipeline.yml
+++ b/.buildkite/pipeline.yml
@@ -177,6 +177,10 @@ steps:
         command: "julia --color=yes --project=examples --threads=8 examples/hybrid/driver.jl --t_end 2hours --job_id test_io --dt_save_to_sol 1hours --dt_save_to_disk 1hours --post_process false"
         artifact_paths: "test_io/*"
 
+      - label: ":computer: Use test env with latest deps"
+        command: "julia --color=yes --project=test examples/hybrid/driver.jl --job_id test_env --enable_threading false --vert_diff true --moist equil --rad allskywithclear --microphy 0M --dt 1secs --t_end 10secs --dt_save_to_sol Inf --z_elem 6 --h_elem 2 --post_process false --dt_rad 2secs"
+        artifact_paths: "test_env/*"
+
 
       - label: ":computer: MPI io test"
         command: "mpiexec julia --color=yes --project=examples examples/hybrid/driver.jl --job_id test_mpi_io --t_end 2hours --dt_save_to_sol 1hours --dt_save_to_disk 1hours --post_process false"
