--- a/Project.toml
+++ b/Project.toml
@@ -42,7 +42,7 @@ DiffEqCallbacks = "2.22"
 Distributions = "0.25"
 DocStringExtensions = "0.8, 0.9"
 FastGaussQuadrature = "0.4"
-Flux = "0.12"
+Flux = "0.12, 0.13"
 Insolation = "0.3"
 IntervalSets = "0.5, 0.6"
 JLD2 = "0.4"
